# runiverse

./: .gitignore  LICENSE  Makefile  README.md  vercel.json
admin/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.ts
admin/src/routes/: +layout.svelte  +page.svelte
app/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
app/src/routes/: +page.svelte
backend/: .env.sample  .pre-commit-config.yaml  manage.py  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: c425329370eb_brands_races_and_series_models.py
backend/brands/: models.py  schemas.py  urls.py  views.py
backend/races/: enums.py  models.py  schemas.py  urls.py  views.py
backend/runiverse/: asgi.py  settings.py  sqlalchemy.py  urls.py  views.py  wsgi.py
backend/runiverse/common/: views.py
backend/runiverse/middleware/: sqlalchemy_session.py
