[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Armando Ezequiel Puerta <armando.ezequiel.puerta@gmail.com>"]
readme = "README.md"
license = "MIT License"
homepage = "https://github.com/EzequielPuerta/runiverse"
repository = "https://github.com/EzequielPuerta/runiverse"
documentation = "https://github.com/EzequielPuerta/runiverse"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.1.0"
django = "^5.2"
djangorestframework = "^3.16.0"
mongoengine = "^0.29.1"
pymongo = {extras = ["srv"], version = "^4.12.0"}

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
black = {version = "^25.1.0", allow-prereleases = true}
pytest = "^8.3.5"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''